--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "sass": "~1.32.6",
